--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <div id="testmonial-carousel" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active container-fluid">
-          <h2 class="testimonial-text">I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
+          <h2 class="testimonial-text">I've found the cute dog on TinDog the best site ever.superbb..</h2>
           <img class="testimonials-image" src="images/dog-img.jpg" alt="dog-profile">
           <em>Pebbles, New York</em>
 
